Fix overflow sidebar

--- a/resources/sass/layout/_nav.scss
+++ b/resources/sass/layout/_nav.scss
@@ -91,6 +91,7 @@
     color: #f0f0f0;
     background-color: #201F3F;
     overflow-y: auto;
+    overflow-x: hidden;
     padding-top: 5rem;
 }
 
